# python-mxf

./: ChangeLog  Makefile.am  README  README.rst  TODO  configure.ac  mxfloader  mxfloader.py
data/: Makefile.am  RP210v10-pub-20070121-1600.csv  tmrequestbody1.raw  tmrequestbody2.raw
debian/: changelog  control  copyright  rules
doc/: Makefile.am  mxfloader.t2t
mxf/: Makefile.am  avid.py  common.py  parser.py  rp210.py  rp210.py.in  rp210types.py  s377m.py
sjmxf/: Makefile.am  avid.py  parser.py  rp210.py.in  rp210types.py  s377m.py
tests/: Makefile.am  test_avid.py  test_common.py  test_rp210types.py  test_s377m.py
tests/data/: avid_aaf_definition.raw  avid_dataset.raw  avid_dataset2.raw  avid_metadata_preface.raw  avid_object_directory.raw  dataset.raw  footer_partition.raw  header_partition.raw  klvfill.raw  preface.raw  primer.raw  random_index_metadata.raw
